--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ dependencies = [
   "cloudpickle~=3.0.0",
   "clu~=0.0.11",
   "flax~=0.8.2",
-  "flaxmodels@git+https://github.com/matthias-wright/flaxmodels",
   "jax~=0.4.25",
   "jaxlib~=0.4.25",
+  "lpips-j~=0.0.6",
   "lz4~=4.3.3",
   "optax~=0.1.9",
   "optuna~=3.5.0",
